# BitNet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  run_inference.py  run_inference_server.py  setup_env.py
.github/workflows/: windows-build.yml
docs/: codegen.md
gpu/: README.md  convert_checkpoint.py  convert_safetensors.py  generate.py  model.py  pack_weight.py  requirements.txt  sample_utils.py  stats.py  test.py  tokenizer.py
gpu/bitnet_kernels/: bitnet_kernels.cu  bitnet_kernels.h  compile.sh  setup.py
include/: ggml-bitnet.h
preset_kernels/Llama3-8B-1.58-100B-tokens/: bitnet-lut-kernels-tl1.h  bitnet-lut-kernels-tl2.h  kernel_config_tl1.ini  kernel_config_tl2.ini
preset_kernels/bitnet_b1_58-3B/: bitnet-lut-kernels-tl1.h  bitnet-lut-kernels-tl2.h  kernel_config_tl1.ini  kernel_config_tl2.ini
preset_kernels/bitnet_b1_58-large/: bitnet-lut-kernels-tl1.h  bitnet-lut-kernels-tl2.h  kernel_config_tl1.ini  kernel_config_tl2.ini
src/: CMakeLists.txt  ggml-bitnet-lut.cpp  ggml-bitnet-mad.cpp
utils/: codegen_tl1.py  codegen_tl2.py  convert-helper-bitnet.py  convert-hf-to-gguf-bitnet.py  convert-ms-to-gguf-bitnet.py  convert.py  e2e_benchmark.py  generate-dummy-bitnet-model.py  preprocess-huggingface-bitnet.py
